# CFD-monthly-average-returns

./: README.md  main.ipynb  main.py  monthly.csv  pyproject.toml
